melhorias no código